--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2397,27 +2397,27 @@ input[type="radio"] + label:before {
 }
 
 .icon.style1:before {
-  color: #c3e895;
+  color: #f0b944;
 }
 
 .icon.style2:before {
-  color: #8addaa;
+  color: #f2cb76;
 }
 
 .icon.style3:before {
-  color: #6bd4c8;
+  color: #c3e895;
 }
 
 .icon.style4:before {
-  color: #57aed3;
+  color: #8addaa;
 }
 
 .icon.style5:before {
-  color: #4a87d3;
+  color: #6bd4c8;
 }
 
 .icon.style6:before {
-  color: #6b88e6;
+  color: #57aed3;
 }
 
 .icon.major {
@@ -3022,7 +3022,7 @@ button:disabled,
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed, fixed, fixed;
   background-image: url("images/overlay2.png"), url("images/overlay3.svg"),
-    linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
+    linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #f2cb76);
   background-position: top left, center center, center center;
   background-size: auto, cover, cover;
   overflow: hidden;
@@ -3226,7 +3226,7 @@ body.is-preload #header:after {
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed, fixed, fixed;
   background-image: url("images/overlay2.png"), url("images/overlay4.svg"),
-    linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
+    linear-gradient(45deg, #f2cb76, #4fa49a 50%, #9dc66b 95%);
   background-position: top left, center center, center center;
   background-size: auto, cover, cover;
   text-align: center;
