--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 
 /*
 	Photon by HTML5 UP
@@ -194,7 +195,7 @@ input,
 select,
 textarea {
   color: #666;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Raleway", Helvetica, sans-serif;
   font-size: 16pt;
   font-weight: 300;
   line-height: 1.65em;
@@ -314,7 +315,7 @@ code {
   background: rgba(144, 144, 144, 0.075);
   border-radius: 4px;
   border: solid 1px rgba(144, 144, 144, 0.5);
-  font-family: "Courier New", monospace;
+  font-family: "Raleway", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
   padding: 0.25em 0.65em;
@@ -322,7 +323,7 @@ code {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  font-family: "Courier New", monospace;
+  font-family: "Raleway", monospace;
   font-size: 0.9em;
   margin: 0 0 2em 0;
 }
@@ -3632,4 +3633,16 @@ body.is-preload #header:after {
   #footer {
     padding: 2em 1em 2em 1em;
   }
+}
+
+/* My additions */
+
+/* .contactEmail,
+.contactText {
+  background-color: rgba(255, 255, 255, 0.582);
+} */
+
+.email-label,
+.message-label {
+  color: #eee;
 }
